--- a/app/src/main/res/drawable-v21/material_button.xml
+++ b/app/src/main/res/drawable-v21/material_button.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?><?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- pressed state -->
@@ -6,7 +6,7 @@
         <inset xmlns:android="http://schemas.android.com/apk/res/android" android:insetBottom="@dimen/button_inset_vertical_material" android:insetLeft="@dimen/button_inset_horizontal_material" android:insetRight="@dimen/button_inset_horizontal_material" android:insetTop="@dimen/button_inset_vertical_material">
             <shape android:shape="rectangle">
                 <corners android:radius="@dimen/control_corner_material" />
-                <solid android:color="@color/accent" />
+                <solid android:color="@color/primary_dark" />
                 <padding android:bottom="@dimen/button_padding_vertical_material" android:left="@dimen/button_padding_horizontal_material" android:right="@dimen/button_padding_horizontal_material" android:top="@dimen/button_padding_vertical_material" />
             </shape>
         </inset>
@@ -17,7 +17,7 @@
         <inset xmlns:android="http://schemas.android.com/apk/res/android" android:insetBottom="@dimen/button_inset_vertical_material" android:insetLeft="@dimen/button_inset_horizontal_material" android:insetRight="@dimen/button_inset_horizontal_material" android:insetTop="@dimen/button_inset_vertical_material">
             <shape android:shape="rectangle">
                 <corners android:radius="@dimen/control_corner_material" />
-                <solid android:color="@color/primary_dark" />
+                <solid android:color="@color/accent" />
                 <padding android:bottom="@dimen/button_padding_vertical_material" android:left="@dimen/button_padding_horizontal_material" android:right="@dimen/button_padding_horizontal_material" android:top="@dimen/button_padding_vertical_material" />
             </shape>
         </inset>
