--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -195,4 +195,56 @@
 
     </RelativeLayout>
 
+    <!-- THIS IS THE MENU BUTTON -->
+    <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/actionMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="20dp"
+        android:onClick="onClickActionMenu"
+        android:src="@drawable/ic_menu_white_48dp"
+        app:borderWidth="0dp"
+        app:elevation="@dimen/fab_button_elevation"
+        app:pressedTranslationZ="@dimen/fab_translation_z_pressed"
+        app:rippleColor="@color/colorPrimaryDark" />
+
+    <!-- THIS IS THE SAVE/CONFIRM BUTTON -->
+    <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/actionConfirm"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="28dp"
+        android:layout_marginRight="28dp"
+        android:background="@drawable/ic_check_white_48dp"
+        android:onClick="onClickCreateAlarm"
+        android:visibility="gone"
+        app:backgroundTint="#6CDA6C"
+        app:borderWidth="0dp"
+        app:elevation="@dimen/fab_button_elevation"
+        app:pressedTranslationZ="@dimen/fab_translation_z_pressed"
+        app:rippleColor="@color/colorPrimaryDark" />
+
+    <!-- THIS IS THE CANCEL BUTTON -->
+    <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/actionCancel"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="82dp"
+        android:layout_marginRight="28dp"
+        android:background="@drawable/ic_cancel_white_48dp"
+        android:onClick="onClickCancelChanges"
+        android:visibility="gone"
+        app:backgroundTint="#FF4719"
+        app:borderWidth="0dp"
+        app:elevation="@dimen/fab_button_elevation"
+        app:pressedTranslationZ="@dimen/fab_translation_z_pressed"
+        app:rippleColor="@color/colorPrimaryDark" />
+
+
 </RelativeLayout>
