--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -39,6 +39,12 @@
         <item name="android:background">@android:drawable/bottom_bar</item>
     </style>
 
+    <style name="ButtonStyle" parent="android:Widget.Button">
+        <item name="android:background">@drawable/material_button</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">20dp</item>
+    </style>
+
     <!-- Backward-compatible version of ?android:attr/buttonBarButtonStyle -->
     <style name="ButtonBarButton" />
 
