--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,31 +19,21 @@
         android:elevation="4dp"
         android:theme="@style/AppTheme.ToolBar" />
 
-    <!-- THIS IS THE MENU BUTTON -->
-    <android.support.design.widget.FloatingActionButton
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/actionMenu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_margin="20dp"
-        android:onClick="onClickActionMenu"
-        android:src="@drawable/ic_menu_white_48dp"
-        app:borderWidth="0dp"
-        app:elevation="@dimen/fab_button_elevation"
-        app:pressedTranslationZ="@dimen/fab_translation_z_pressed"
-        app:rippleColor="@color/colorPrimaryDark" />
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/toolbar" />
 
-    <!-- THIS IS THE CREATE BUTTON -->
-    <android.support.design.widget.FloatingActionButton
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/actionCreate"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="82dp"
+        android:layout_marginBottom="28dp"
         android:layout_marginRight="28dp"
         android:background="@drawable/ic_add_alert_white_48dp"
         android:onClick="onClickActionCreateAlarm"
@@ -54,15 +44,13 @@
         app:pressedTranslationZ="@dimen/fab_translation_z_pressed"
         app:rippleColor="@color/colorPrimaryDark" />
 
-    <!-- THIS IS THE DELETE BUTTON -->
-    <android.support.design.widget.FloatingActionButton
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/actionDelete"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="124dp"
+        android:layout_marginBottom="28dp"
         android:layout_marginRight="28dp"
         android:background="@drawable/ic_cancel_white_48dp"
         android:onClick="onClickActionDeleteAlarm"
@@ -73,12 +61,36 @@
         app:pressedTranslationZ="@dimen/fab_translation_z_pressed"
         app:rippleColor="@color/colorPrimaryDark" />
 
-    <ListView
-        android:id="@+id/listView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/toolbar" />
+    <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/actionEdit"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="28dp"
+        android:layout_marginRight="28dp"
+        android:background="@drawable/ic_edit_white_48dp"
+        android:onClick="onClickActionEditAlarm"
+        android:visibility="gone"
+        app:backgroundTint="#FFA319"
+        app:borderWidth="0dp"
+        app:elevation="@dimen/fab_button_elevation"
+        app:pressedTranslationZ="@dimen/fab_translation_z_pressed"
+        app:rippleColor="@color/colorPrimaryDark" />
+
+    <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/actionMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignWithParentIfMissing="false"
+        android:layout_margin="20dp"
+        android:onClick="onClickActionMenu"
+        android:src="@drawable/ic_menu_white_48dp"
+        app:borderWidth="0dp"
+        app:elevation="@dimen/fab_button_elevation"
+        app:pressedTranslationZ="@dimen/fab_translation_z_pressed"
+        app:rippleColor="@color/colorPrimaryDark" />
 
 </RelativeLayout>
