--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,7 +52,7 @@
         android:layout_alignParentRight="true"
         android:layout_marginBottom="28dp"
         android:layout_marginRight="28dp"
-        android:background="@drawable/ic_cancel_white_48dp"
+        android:background="@drawable/ic_trash_white"
         android:onClick="onClickActionDeleteAlarm"
         android:visibility="gone"
         app:backgroundTint="#FF4719"
