--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -52,11 +52,24 @@
             android:onClick="onSetAlarmTime"
             android:text="@string/setTime" />
 
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/button"
+            android:clickable="false"
+            android:spinnerMode="dialog"
+            android:touchscreenBlocksFocus="false" />
+
         <TableLayout
             android:id="@+id/dayTable"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/spinner"
             android:shrinkColumns="0"
             android:stretchColumns="1,2,3,4,5,6,7"
             android:visibility="gone">
@@ -128,7 +141,7 @@
                     android:layout_column="7"
                     android:layout_gravity="bottom|center_horizontal"
                     android:labelFor="@+id/checkBox_Saturday"
-                    android:text="@string/checkBox_Sunday"
+                    android:text="@string/checkBox_Saturday"
                     android:textAlignment="gravity" />
             </TableRow>
 
@@ -192,6 +205,35 @@
             </TableRow>
 
         </TableLayout>
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:onClick="onSetAlarmTime"
+            android:text="@string/setStartDate"
+            android:visibility="gone" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/button2"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:onClick="onSetAlarmTime"
+            android:text="@string/setEndDate"
+            android:visibility="gone" />
+
+        <Spinner
+            android:id="@+id/spinner2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/spinner"
+            android:layout_centerHorizontal="true" />
 
     </RelativeLayout>
 
