--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -53,15 +53,17 @@
             android:text="@string/setTime" />
 
         <Spinner
-            android:id="@+id/spinner"
+            android:id="@+id/RepeatSpinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:layout_below="@+id/button"
-            android:clickable="false"
-            android:spinnerMode="dialog"
-            android:touchscreenBlocksFocus="false" />
+            android:layout_toEndOf="@+id/repeatSelectorText"
+            android:layout_toRightOf="@+id/repeatSelectorText"
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp"
+            android:spinnerMode="dialog" />
 
         <TableLayout
             android:id="@+id/dayTable"
@@ -69,7 +71,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/spinner"
+            android:layout_below="@+id/RepeatSpinner"
             android:shrinkColumns="0"
             android:stretchColumns="1,2,3,4,5,6,7"
             android:visibility="gone">
@@ -228,12 +230,47 @@
             android:text="@string/setEndDate"
             android:visibility="gone" />
 
-        <Spinner
-            android:id="@+id/spinner2"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/repeatSelectorText"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/spinner"
-            android:layout_centerHorizontal="true" />
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/button"
+            android:text="@string/repeatSelectorText"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <RelativeLayout
+            android:id="@+id/weeklySelectorLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/RepeatSpinner"
+            android:visibility="gone">
+
+            <TextView
+                android:id="@+id/weeklySelectorText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:text="@string/weeklySelectorText"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+
+            <Spinner
+                android:id="@+id/weeklySpinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@+id/weeklySelectorText"
+                android:layout_toRightOf="@+id/weeklySelectorText"
+                android:outlineProvider="bounds"
+                android:paddingBottom="5dp"
+                android:paddingTop="5dp"
+                android:spinnerMode="dialog" />
+        </RelativeLayout>
 
     </RelativeLayout>
 
@@ -284,7 +321,7 @@
         android:layout_alignParentRight="true"
         android:layout_margin="20dp"
         android:onClick="onClickActionMenu"
-        android:src="@drawable/ic_menu_white_48dp"
+        android:src="@drawable/ic_add_white_48dp"
         app:borderWidth="0dp"
         app:elevation="@dimen/fab_button_elevation"
         app:pressedTranslationZ="@dimen/fab_translation_z_pressed"
