--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -20,7 +20,7 @@
         android:padding="15dp">
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/medicationNameText"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/toolbar"
@@ -32,11 +32,11 @@
             android:id="@+id/timeText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/editText"
+            android:layout_alignEnd="@+id/medicationNameText"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_alignRight="@+id/editText"
-            android:layout_below="@+id/editText"
+            android:layout_alignRight="@+id/medicationNameText"
+            android:layout_below="@+id/medicationNameText"
             android:editable="false"
             android:ems="10"
             android:hint="@string/alarmTimeUnset"
