--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -26,6 +26,7 @@
             android:layout_below="@+id/toolbar"
             android:layout_marginBottom="5dp"
             android:hint="@string/medName"
+            android:singleLine="true"
             android:textAlignment="center" />
 
         <EditText
