--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -1,7 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-    >
+                tools:context="concentric.medalarm.activity.AlarmActivity">
 
     <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/toolbar"
@@ -64,7 +65,7 @@
             android:layout_toRightOf="@+id/repeatSelectorText"
             android:paddingBottom="5dp"
             android:paddingTop="5dp"
-            android:spinnerMode="dialog" />
+            android:spinnerMode="dropdown" />
 
         <TableLayout
             android:id="@+id/dayTable"
