--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -259,7 +259,8 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:text="@string/weeklySelectorText"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:visibility="visible" />
 
             <Spinner
                 android:id="@+id/weeklySpinner"
@@ -271,7 +272,8 @@
                 android:outlineProvider="bounds"
                 android:paddingBottom="5dp"
                 android:paddingTop="5dp"
-                android:spinnerMode="dialog" />
+                android:spinnerMode="dialog"
+                android:visibility="visible" />
         </RelativeLayout>
 
     </RelativeLayout>
