--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -65,7 +65,7 @@
             android:layout_toRightOf="@+id/repeatSelectorText"
             android:paddingBottom="5dp"
             android:paddingTop="5dp"
-            android:spinnerMode="dropdown" />
+            android:spinnerMode="dialog" />
 
         <TableLayout
             android:id="@+id/dayTable"
