--- a/app/src/main/res/layout/activity_alarm_group.xml
+++ b/app/src/main/res/layout/activity_alarm_group.xml
@@ -57,7 +57,7 @@
             <ListView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/listView2"
+                android:id="@+id/dailyAlarmList"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 style="@style/Widget.AppCompat.ListView"
@@ -66,16 +66,17 @@
             <!-- THIS IS THE ADD BUTTON -->
             <android.support.design.widget.FloatingActionButton
                 xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/actionMenu"
+                android:id="@+id/addTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentRight="true"
                 android:src="@drawable/ic_add_white_48dp"
-                app:borderWidth="0dp"
                 app:elevation="@dimen/fab_button_elevation"
                 app:pressedTranslationZ="@dimen/fab_translation_z_pressed"
-                app:rippleColor="@color/colorPrimaryDark" />
+                app:rippleColor="@color/colorPrimaryDark"
+                style="@style/AppTheme.FloatingActionButton"
+                />
         </RelativeLayout>
 
     </RelativeLayout>
