--- a/app/src/main/res/layout/activity_alarm_group.xml
+++ b/app/src/main/res/layout/activity_alarm_group.xml
@@ -17,14 +17,15 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="false"
         android:layout_alignParentStart="true"
-        android:theme="@style/AppTheme.ToolBar"/>
+        android:theme="@style/AppTheme.ToolBar"
+        android:elevation="4dp"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="15dp"
         android:layout_below="@+id/AlarmGroupToolbar"
-        android:id="@+id/alarmDefinition">
+        android:id="@+id/alarmDefinition"
+        >
 
         <EditText
             android:layout_width="fill_parent"
@@ -32,7 +33,13 @@
             android:id="@+id/editText"
             android:inputType="textCapWords"
             android:capitalize="words"
-            android:hint="@string/name"/>
+            android:hint="@string/name"
+            android:paddingLeft="15dp"
+            android:paddingTop="15dp"
+            android:paddingRight="15dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="15dp"/>
 
         <android.support.v7.widget.AppCompatSpinner
             android:layout_width="fill_parent"
@@ -42,11 +49,14 @@
             android:layout_centerHorizontal="true"
             android:spinnerMode="dropdown"
             style="@style/Widget.AppCompat.Spinner.Underlined"
-            android:prompt="@string/alarmType"/>
+            android:prompt="@string/alarmType"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="15dp"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="fill_parent"
             android:layout_below="@+id/AlarmType"
             android:layout_centerHorizontal="true"
             android:animateLayoutChanges="true"
@@ -61,7 +71,8 @@
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 style="@style/Widget.AppCompat.ListView"
-                />
+                android:layout_marginTop="15dp"
+                android:layout_marginRight="15dp"/>
 
             <!-- THIS IS THE ADD BUTTON -->
             <android.support.design.widget.FloatingActionButton
@@ -72,11 +83,13 @@
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentRight="true"
                 android:src="@drawable/ic_add_white_48dp"
+                app:borderWidth="0dp"
                 app:elevation="@dimen/fab_button_elevation"
                 app:pressedTranslationZ="@dimen/fab_translation_z_pressed"
                 app:rippleColor="@color/colorPrimaryDark"
-                style="@style/AppTheme.FloatingActionButton"
-                />
+                android:layout_marginRight="@dimen/fab_button_margin_right"
+                android:layout_marginBottom="@dimen/fab_button_margin_bottom"/>
+
         </RelativeLayout>
 
     </RelativeLayout>
