--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,7 @@
         <item name="android:textColorSecondary">@color/white</item>
         <item name="android:textColor">@color/primary_text</item>
         <item name="android:popupMenuStyle">@style/AppTheme.ToolBar.Popup</item>
+        <item name="android:elevation">4dp</item>
     </style>
 
     <style name="AppTheme.ToolBar.Popup"
