--- a/app/src/main/res/layout/alarm_group_card.xml
+++ b/app/src/main/res/layout/alarm_group_card.xml
@@ -37,21 +37,21 @@
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:id="@+id/groupName"
                     android:focusableInTouchMode="false"
-                    android:text="asdfasdfa"
                     android:elegantTextHeight="false"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"/>
+                    android:layout_alignParentStart="true"
+                    android:text="@string/alarmGroupName"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:id="@+id/groupType"
-                    android:text="asdfasdf"
                     android:layout_below="@+id/groupName"
                     android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"/>
+                    android:layout_alignParentStart="true"
+                    android:text="@string/alarmGroupType"/>
             </RelativeLayout>
 
         </TableRow>
@@ -72,17 +72,15 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="8dp">
+            android:padding="8dp"
+            android:gravity="left">
 
             <Switch
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/enabled"
                 android:id="@+id/switch1"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="0dp"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="0dp"/>
+                android:layout_gravity="left"/>
         </TableRow>
     </TableLayout>
 
