Cleaned up unused imports.

--- a/app/src/main/res/layout/alarm_group_card.xml
+++ b/app/src/main/res/layout/alarm_group_card.xml
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
+    android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center">
-<android.support.v7.widget.CardView
-    android:id="@+id/alarmGroupCard"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="16dp"
-    style="@style/CardView"
-    android:layout_alignParentEnd="true"
-    android:measureWithLargestChild="false"
-    android:divider="@color/default_divider_color_light"
-    android:showDividers="middle">
 
-    <TableLayout
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/alarmGroupCard"
+        style="@style/CardView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="16dp"
+        android:divider="@color/default_divider_color_light"
+        android:measureWithLargestChild="false"
+        android:showDividers="middle">
+
+        <TableLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
@@ -32,26 +30,26 @@
                 android:padding="8dp">
 
                 <TextView
+                    android:id="@+id/groupName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:id="@+id/groupName"
-                    android:focusableInTouchMode="false"
-                    android:elegantTextHeight="false"
-                    android:layout_alignParentTop="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:text="@string/alarmGroupName"/>
+                    android:layout_alignParentTop="true"
+                    android:elegantTextHeight="false"
+                    android:focusableInTouchMode="false"
+                    android:text="@string/alarmGroupName"
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
 
                 <TextView
+                    android:id="@+id/groupType"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:id="@+id/groupType"
-                    android:layout_below="@+id/groupName"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:text="@string/alarmGroupType"/>
+                    android:layout_below="@+id/groupName"
+                    android:text="@string/alarmGroupType"
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
             </RelativeLayout>
 
         </TableRow>
@@ -72,15 +70,15 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="8dp"
-            android:gravity="left">
+            android:gravity="left"
+            android:padding="8dp">
 
             <Switch
+                android:id="@+id/switch1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/enabled"
-                android:id="@+id/switch1"
-                android:layout_gravity="left"/>
+                android:layout_gravity="left"
+                android:text="@string/enabled" />
         </TableRow>
     </TableLayout>
 
