--- a/app/src/main/res/layout/activity_alarm_group.xml
+++ b/app/src/main/res/layout/activity_alarm_group.xml
@@ -92,6 +92,22 @@
 
         </RelativeLayout>
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/IntervalAlarms"
+            android:layout_below="@+id/AlarmType">
+
+            <fragment
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:name="com.doomonafireball.betterpickers.hmspicker.HmsPickerDialogFragment"
+                android:id="@+id/fragment"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+                tools:layout="@layout/hms_picker_view"/>"/>
+        </RelativeLayout>
+
     </RelativeLayout>
 
 </RelativeLayout>
