--- a/app/src/main/res/layout/activity_alarm_group.xml
+++ b/app/src/main/res/layout/activity_alarm_group.xml
@@ -96,7 +96,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/IntervalAlarms"
-            android:layout_below="@+id/AlarmType">
+            android:layout_below="@+id/AlarmType"
+            android:visibility="gone">
 
             <fragment
                 android:layout_width="wrap_content"
