--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
         android:layout_alignParentRight="true"
         android:layout_marginBottom="28dp"
         android:layout_marginRight="28dp"
-        android:background="@drawable/ic_trash_white"
+        android:background="@drawable/ic_white_trash"
         android:onClick="onClickActionDeleteAlarm"
         android:visibility="gone"
         app:backgroundTint="#FF4719"
