Commented out dialog picker thing matt added. Until he fixes the problem.

--- a/app/src/main/res/layout/activity_alarm_group.xml
+++ b/app/src/main/res/layout/activity_alarm_group.xml
@@ -62,7 +62,7 @@
             android:animateLayoutChanges="true"
             android:id="@+id/DailyAlarms"
             android:layout_marginTop="10dp"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <com.baoyz.swipemenulistview.SwipeMenuListView
                 android:id="@+id/dailyAlarmList"
