Changed the color of the buttons.

--- a/app/src/main/res/layout/activity_alarm_group.xml
+++ b/app/src/main/res/layout/activity_alarm_group.xml
@@ -84,7 +84,8 @@
                 app:pressedTranslationZ="@dimen/fab_translation_z_pressed"
                 app:rippleColor="@color/colorPrimaryDark"
                 android:layout_marginRight="@dimen/fab_button_margin_right"
-                android:layout_marginBottom="@dimen/fab_button_margin_bottom"/>
+                android:layout_marginBottom="@dimen/fab_button_margin_bottom"
+                android:onClick="timePickerClicker"/>
 
         </RelativeLayout>
 
